spec/.test/config/invalid/tags.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [
        'tag1' => [],
        'tag2' => 1,
        'tag3' => [],
    ]
];
